styles/style.css
* {
    padding: 0;
    margin: 0;
    font-family: 'Open Sans', sans-serif;
    /* border: 2px solid red; */
}

main {
    background-color: #FFFFFF;
}

.btn-primary {
    color: #005FAC;
    background: #FFFFFF;
    font-weight: 600;
    font-size: 20px;
    padding: 21px 25px 20px 20px;
    border: none;
    border-radius: 5px;
}

/* Heading styles */

/* layout */
header {
    background-image: url('/images/banner/banner3.png');
    height: 100vh;
    background-size: cover;
    display: flex;
    justify-content: flex-end;

}

.header-container {
    text-align: right;
    direction: rtl;
    margin-top: 100px;
    margin-right: 120px;
    max-height: 60%;


}


.heading-title {
    color: #FFFFFF;
}

.heading-description {
    margin-top: 24px;
    margin-bottom: 32px;
}

/* typography  header*/
.heading-title {
    font-weight: 700;
    font-size: 50px;
}

.heading-description {
    color: #FFFFFF;
}


/* previous failure section */

.past-story {
    width: 80%;
    /* height: 80vh; */
    margin: 0 auto;
}

.past-story-container {
    display: flex;
    gap: 20px;
    justify-content: space-between;
}

.img-container img {
    width: 70%;



}

.img-container {
    padding-top: 100px;
    object-fit: cover;
    margin: 0 auto;
    padding-bottom: 100px;
}

.article-container {
    margin-top: 200px;

}

.article-title {
    font-size: 35px;
    font-weight: 700;
}

.article-description {
    margin-top: 25px;
    margin-bottom: 18px;
}

.tick-sign {
    color: green;
    font-size: 20px;
    padding-right: 10px;
}

.failing-items {
    list-style-type: none;

    /* padding-left: 2px; */

}


/* my plan styles */
.my-plan {
    display: flex;
    justify-content: center;
    margin: 0 auto;
    width: 90%;

}

.my-plan .article-title {
    text-align: center;
    margin: 50px 0;
}

.plan-container {
    display: flex;
    gap: 40px;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-bottom: 120px;
}


/* motivation banner */

.motivation-banner-container {
    width: 80%;
    margin: 0 auto;
    border-radius: 5px;
    margin-bottom: 150px;
    background-image: url("/images/watch.png"), linear-gradient(to right, rgba(1, 95, 172, 1), rgba(0, 95, 171, .9), rgba(0, 96, 159, .4), rgba(255, 255, 255, .3));
    background-blend-mode: overlay;
    background-size: cover;
}

.motivation-banner-container {
    padding: 60px 64px;
}

.motivation-banner-container .section-title {
    color: #FFFFFF;
    font-weight: 700;
    font-size: 40px;
    margin-bottom: 24px;
}


/* footer area */

footer {
    background-color: #151414;
    color: #FFFFFF;
    display: flex;
    justify-content: space-between;
    gap: 250px;
    padding: 40px;
}

.section-title {
    font-weight: 700;
    font-size: 45px;
    margin-bottom: 16px;
}

.section-sub-title {
    font-weight: 600;
    font-size: 25px;
    margin-bottom: 30px;
}

footer .section-description {
    font-weight: 400;
    font-size: 16px;
    margin-bottom: 24px;
}

.contact-info {
    font-weight: 400;
    font-size: 16px;
    margin-bottom: 16px;

}

.social-links {
    margin-top: 32px;
    display: flex;
    gap: 20px;

}

.social-links a {
    text-decoration: none;
}

.social-links img {
    max-width: 40px;
}

.subscription-container form {
    display: flex;
    flex-direction: column;
}

.subscribe-email {
    border: 1px solid #FFFFFF;
    background-color: #151414;
    color: #FFFFFF;
    margin-bottom: 16px;
    padding: 20px;


}

form .btn-primary {
    color: #FFFFFF;
    background: #005FAC;
    width: 50%;
    padding: 15px;
}

